# chainvet

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IR_USAGE.md  LICENSE  M1_M2_M3_DETAILS.md  M1_M2_M3_USAGE.md  README.md  benchmark_hybrid.py  benchmark_hybrid_results.json  fuzzer_results.md  fuzzer_results_raw.txt  hybrid.md  output.txt  plan.md  taxonomy.xlsx
.claude/agents/: rust-reviewer.md  se-architect.md  test-writer.md
.github/workflows/: ci.yml  release.yml
Benchmarks/: README.md  benchmark_scope.json  catalog.csv  target_manifest.json
Benchmarks/FSE2024/: BNB-OFFICIAL.csv  README.md  all_approaches_manifest.json  benchmark_manifest.json  exclusions.csv
crates/chainvet-ai/: Cargo.toml
crates/chainvet-ci/: Cargo.toml
crates/chainvet-cli/: Cargo.toml
crates/chainvet-cli/src/: main.rs  render.rs
crates/chainvet-cli/src/analysis/: taint.rs
crates/chainvet-cli/src/analysis/detectors/: access_control.rs  arithmetic.rs  block_manipulation.rs  denial_of_service.rs  misc.rs  mod.rs  reentrancy.rs  storage_memory.rs
crates/chainvet-cli/src/cfg/: mod.rs
crates/chainvet-cli/src/fuzzing/: executor.rs  mod.rs  oracle.rs  runner.rs  types.rs
crates/chainvet-cli/src/hybrid/: budget.rs  mod.rs  orchestrator.rs  report.rs  seeding.rs  targeting.rs
crates/chainvet-cli/src/ir/: mod.rs
crates/chainvet-cli/src/meta/: mod.rs
crates/chainvet-cli/src/report/: mod.rs
crates/chainvet-cli/src/symbolic/: mod.rs
crates/chainvet-cli/src/symbolic/detectors/: access_control.rs  arithmetic.rs  block_manipulation.rs  cryptographic.rs  delegatecall.rs  dos.rs  mod.rs  reentrancy.rs  storage.rs
crates/chainvet-cli/src/symbolic/engine/: executor.rs  explorer.rs  mod.rs  scheduler.rs
crates/chainvet-cli/src/symbolic/results/: finding.rs  report.rs  witness.rs
crates/chainvet-cli/src/symbolic/state/: memory.rs
crates/chainvet-cli/src/symbolic/types/: mod.rs
crates/chainvet-cli/tests/: cli.rs
crates/chainvet-cli/tests/fixtures/: vuln_reentrancy.sol
crates/chainvet-core/: Cargo.toml
crates/chainvet-frontend/: Cargo.toml
crates/chainvet-fuzzing/: Cargo.toml
crates/chainvet-fuzzing/src/: lib.rs
crates/chainvet-fuzzing/src/fuzzing/: executor.rs  generator.rs  mod.rs  mutator.rs  oracle.rs  runner.rs  types.rs
crates/chainvet-hybrid/: Cargo.toml
crates/chainvet-hybrid/src/: lib.rs
crates/chainvet-hybrid/src/hybrid/: budget.rs  mod.rs  orchestrator.rs  report.rs  seeding.rs  targeting.rs
crates/chainvet-lsp/: Cargo.toml
crates/chainvet-lsp/src/: main.rs
crates/chainvet-orchestrator/: Cargo.toml
crates/chainvet-orchestrator/src/: ai_report.rs  lib.rs
crates/chainvet-orchestrator/tests/: scan.rs
crates/chainvet-sa/: Cargo.toml
crates/chainvet-se/: Cargo.toml
crates/chainvet-se/src/: lib.rs
crates/chainvet-se/src/symbolic/: mod.rs
crates/chainvet-se/src/symbolic/detectors/: access_control.rs  arithmetic.rs  block_manipulation.rs  cryptographic.rs  delegatecall.rs  dos.rs  mod.rs  reentrancy.rs  storage.rs
crates/chainvet-se/src/symbolic/engine/: executor.rs  explorer.rs  mod.rs  scheduler.rs
crates/chainvet-se/src/symbolic/results/: coverage.rs  finding.rs  report.rs  witness.rs
crates/chainvet-se/src/symbolic/solver/: mod.rs  optimization.rs  z3_backend.rs
crates/chainvet-se/src/symbolic/state/: call_context.rs  constraints.rs  memory.rs  mod.rs  storage.rs  variables.rs
crates/chainvet-se/src/symbolic/types/: bitvec.rs  hash.rs  mod.rs  symbolic_array.rs  symbolic_bytes.rs
crates/chainvet-server/: Cargo.toml
crates/chainvet-server/src/: main.rs  web.rs
docs/: README.md  architecture_current.md  architecture_target.md  coverage_matrix.md  engine_evolution_and_hybrid_benchmark_report.md  engine_improvement_plan.md  evaluation_modes.md  fuzzing_approach_evolution.md  google_stitch_gui_prompt.md  grad_project_presentation_plan.md  hybrid_approach.md  hybrid_approach_evolution.md  hybrid_handoff_plan.md  hybrid_questions_answered.md  hybrid_vs_external_tools_detailed_report.md  not_so_smart_comparison.md  not_so_smart_manual_audit_check.md  not_so_smart_reviewed_truth.md  reviewed_truth_fix_plan.md  runtime_accuracy_handoff.md  runtime_miss_report.md  smartbugs_curated_comparison.md  smartbugs_external_tools_comparison.md  smartbugs_extra_findings_audit.md  smartbugs_hybrid_extra_family_review_queue.md  static_approach_evolution.md  symbolic_execution_approach_evolution.md  taxonomy_engine_mapping.md  web_gui_plan.md
docs/archive/: README.md
fixtures/: arithmetic_test.sol  block_manipulation_test.sol  broken.sol  chatgpttestcases.sol  comprehensive_security_test.sol  cryptographic_test.sol  denial_of_service_test.sol  fuzz_target.sol  ir_sample.sol  new_batch_no_loop.sol  new_batch_simple.sol  reentrancy_test.sol  se_test.sol  storage_memory_test.sol  taint_test.sol  variant_security_test.sol  vuln_access_control.sol  vuln_auction.sol  vuln_dos.sol  vuln_exception.sol  vuln_overflow.sol  vuln_selfdestruct.sol  vuln_timestamp.sol  vuln_txorigin.sol  vuln_unchecked_call.sol
fixtures/ground_truth/: chatgpttestcases.json  not_so_smart_reviewed_truth.json  smartbugs_reviewed_overlay.json
fixtures/m2_m3/: m2_broken_fallback.sol  m2_version_0_4.sol  m2_version_0_5.sol  m2_version_0_6.sol  m2_version_0_7.sol  m3_control_flow.sol  m3_expressions.sol  m3_ssa_phi.sol  m3_storage_calls.sol  m3_tuples.sol
runs/run-1775475299331/: coverage_history.json  findings.json  report.json  se_assists.json  seed_corpus.json  static_hints.json  target.json
runs/run-1775475301123/: findings.json  report.json  seed_corpus.json  static_hints.json  target.json
runs/run-1775475301833/: findings.json  report.json  seed_corpus.json  static_hints.json  target.json
runs/run-1775475302401/: findings.json  (+3 more)
scripts/: list_fse_benchmark_targets.py  run_not_so_smart_benchmark.py  run_smartbugs_curated_benchmark.py  run_smartbugs_hybrid_vs_tools.py  score_modes.sh  score_not_so_smart_reviewed_truth.py  score_not_so_smart_run.py  score_smartbugs_curated.py  score_smartbugs_hybrid_vs_tools.py
src/: ai_report.rs  main.rs
tests/: cli.rs
(+941 files in other folders)
