[package]
name = "Static"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.25"
tree-sitter-solidity = "1"
rand = "0.8"
sha2 = "0.10"
z3 = "0.19.11"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "net"] }
