[package]
name = "chainvet-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "chainvet"
path = "src/main.rs"

[dependencies]
chainvet-core = { path = "../chainvet-core" }
chainvet-frontend = { path = "../chainvet-frontend" }
chainvet-orchestrator = { path = "../chainvet-orchestrator" }
serde_json = "1"
