[package]
name = "chainvet-fuzzing"
version = "0.1.0"
edition = "2024"

[dependencies]
chainvet-core = { path = "../chainvet-core" }
chainvet-frontend = { path = "../chainvet-frontend" }
chainvet-sa = { path = "../chainvet-sa" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
sha2 = "0.10"

[dev-dependencies]
proptest = "1"
