[package]
name = "chainvet-hybrid"
version.workspace = true
edition = "2024"

[dependencies]
chainvet-core = { path = "../chainvet-core" }
chainvet-frontend = { path = "../chainvet-frontend" }
chainvet-sa = { path = "../chainvet-sa" }
chainvet-se = { path = "../chainvet-se" }
chainvet-fuzzing = { path = "../chainvet-fuzzing" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
