[package]
name = "chainvet-lsp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "chainvet-lsp"
path = "src/main.rs"

[dependencies]
chainvet-core = { path = "../chainvet-core" }
chainvet-orchestrator = { path = "../chainvet-orchestrator" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "macros"] }
