[package]
name = "chainvet-lsp"
version.workspace = true
edition = "2024"

[[bin]]
name = "chainvet-lsp"
path = "src/main.rs"

[dependencies]
chainvet-core = { path = "../chainvet-core" }
chainvet-orchestrator = { path = "../chainvet-orchestrator" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
