[package]
name = "chainvet-orchestrator"
version.workspace = true
edition = "2024"

[dependencies]
chainvet-core = { path = "../chainvet-core" }
chainvet-ai = { path = "../chainvet-ai" }
chainvet-frontend = { path = "../chainvet-frontend" }
chainvet-sa = { path = "../chainvet-sa" }
chainvet-se = { path = "../chainvet-se" }
chainvet-fuzzing = { path = "../chainvet-fuzzing" }
chainvet-hybrid = { path = "../chainvet-hybrid" }
serde = { version = "1", features = ["derive"] }
