[package]
name = "chainvet-se"
version = "0.1.0"
edition = "2024"

[dependencies]
chainvet-core = { path = "../chainvet-core" }
chainvet-frontend = { path = "../chainvet-frontend" }
chainvet-sa = { path = "../chainvet-sa" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny-keccak = { version = "2", features = ["keccak"] }
z3 = "0.19.11"

[dev-dependencies]
proptest = "1"
