[package]
name = "chainvet-server"
version.workspace = true
edition = "2024"

[[bin]]
name = "chainvet-server"
path = "src/main.rs"

[dependencies]
chainvet-core = { path = "../chainvet-core" }
chainvet-orchestrator = { path = "../chainvet-orchestrator" }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
